Fixed alignment issues when not max connection cards in page

--- a/frontend/src/components/ConnectionCard.css
+++ b/frontend/src/components/ConnectionCard.css
@@ -5,7 +5,7 @@
     background-color: #F2F2F2;
     padding: 2vh 0;
     border-radius: 10px;
-    width: 10vw;
+    width: 15vw;
     height: 24vh;
     text-align: center;
 }
