--- a/frontend/src/pages/Connections.css
+++ b/frontend/src/pages/Connections.css
@@ -22,6 +22,7 @@
     display: flex;
     margin: 1%;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1vh;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 2.2ch;
 }
